idk what i did there

--- a/grade_project/grade_app/templates/grade_app/gradebook.html
+++ b/grade_project/grade_app/templates/grade_app/gradebook.html
@@ -39,7 +39,7 @@
 
 <!-- Grade List -->
 {% for grade in grades %}
-<a href="{% url 'gradebook' pk=gradebook.pk %}" style="text-decoration: none !important">
+<a href="{% url 'grade' pk=grade.pk %}" style="text-decoration: none !important">
     <div class="my-1 py-3 px-4 grade-font-white grade-container-dark rounded shadow">
         {{ grade.title }}
         <div class="float-right">{% if not grade.weighted %}* {% endif %}{{ grade.creditpoints }}LP / {{ grade.value }}
