--- a/grade_project/grade_app/templates/registration/login.html
+++ b/grade_project/grade_app/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 
 {% block css %}
-<link rel="stylesheet" type="text/css" href='{% static "grade_app/css/home.css" %}'>
+<link rel="stylesheet" type="text/css" href='{% static "css/home.css" %}'>
 {% endblock css %}
 
 {% block title %}Login{% endblock %}
