--- a/grade_project/grade_app/templates/grade_app/gradebook.html
+++ b/grade_project/grade_app/templates/grade_app/gradebook.html
@@ -107,5 +107,5 @@
 {% endblock js %}
 
 {% block css %}
-<link rel="stylesheet" type="text/css" href='{% static "grade_app/css/home.css" %}'>
+<link rel="stylesheet" type="text/css" href='{% static "css/home.css" %}'>
 {% endblock css %}
