--- a/grade_project/grade_app/templates/grade_app/home.html
+++ b/grade_project/grade_app/templates/grade_app/home.html
@@ -3,7 +3,7 @@
 
 
 {% block css %}
-<link rel="stylesheet" type="text/css" href='{% static "grade_app/css/home.css" %}'>
+<link rel="stylesheet" type="text/css" href='{% static "css/home.css" %}'>
 {% endblock css %}
 
 {% block title %}Home{% endblock %}
