Minor UI Improvements

--- a/grade_project/grade_app/templates/grade_app/gradebook.html
+++ b/grade_project/grade_app/templates/grade_app/gradebook.html
@@ -50,10 +50,37 @@
 
 <!-- Delete this Gradebook Button -->
 <div class="text-right">
-    <a href="{% url 'gradebook-delete' pk=gradebook.pk %}"
-        class="btn btn-dark my-1 py-3 px-5 grade-font-white grade-container-dark rounded shadow font-weight-light">
+    <button type="button" class="btn btn-dark my-1 py-3 px-5 grade-font-white grade-container-dark rounded shadow font-weight-light" data-toggle="modal" data-target="#exampleModal">
         Delete this Gradebook
-    </a>
+    </button>
+</div>
+
+<!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Please confirm</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Do you really want to delete "{{ gradebook.title }}"?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <a href="{% url 'gradebook-delete' pk=gradebook.pk %}"
+                    class="btn btn-danger grade-font-white">
+                    Delete
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- New Grade Button -->
