--- a/grade_project/grade_app/templates/grade_app/grade-new.html
+++ b/grade_project/grade_app/templates/grade_app/grade-new.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
-{% load crispy_forms_tags %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 
 
 {% block css %}
-<link rel="stylesheet" type="text/css" href='{% static "grade_app/css/home.css" %}'>
+<link rel="stylesheet" type="text/css" href='{% static "css/home.css" %}'>
 {% endblock css %}
 
 {% block title %}New Grade{% endblock %}
