--- a/grade_project/grade_app/templates/base.html
+++ b/grade_project/grade_app/templates/base.html
@@ -15,15 +15,15 @@
     {% block css %} {% endblock css %}
 
     <title>
-        {% block title %}{% endblock title %}
+        UNIGRADES - {% block title %}{% endblock title %}
     </title>
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark grade-navbar shadow py-4">
+    <nav class="navbar navbar-expand-md navbar-dark grade-navbar shadow py-4">
         <a class="navbar-brand" href="{% url 'home' %}">
-            UniGrades
+            UNIGRADES
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,26 +36,35 @@
                     <a class="nav-link" href="#">
                         <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item {% if request.resolver_match.url_name == 'home' %}active{% endif %} ">
                     <a class="nav-link" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'about' %}">About</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'about' %}active{% endif %}"
+                        href="{% url 'about' %}">About</a>
                 </li>
             </ul>
 
-            {% if request.user.is_authenticated %}
-            <a class="btn btn-outline-danger mx-lg-2" href="{% url 'logout' %}">
-                Logout
-            </a>
-            {% else %}
-            <a class="btn btn-outline-primary mx-lg-2" href="{% url 'signup' %}">
-                Signup
-            </a>
-            <a class="btn btn-outline-primary mx-lg-2" href="{% url 'login' %}">
-                Login
-            </a>
-            {% endif %}
+            <ul class="navbar-nav ml-auto">
+                {% if request.user.is_authenticated %}
+                <li class="nav-item active">
+                    <a class="nav-link text-danger" href="{% url 'logout' %}">
+                        Logout
+                    </a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'signup' %}">
+                        Register
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">
+                        Login
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
 
         </div>
     </nav>
