--- a/grade_project/grade_app/templates/grade_app/about.html
+++ b/grade_project/grade_app/templates/grade_app/about.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href='{% static "css/home.css" %}'>
 {% endblock css %}
 
-{% block title %}Home{% endblock %}
+{% block title %}About{% endblock %}
 
 {% block content %}
 <div class="container grade-container-dark my-4 p-5 rounded shadow">
